# my-repo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/my_repo/: __init__.py  config.py  training.py
