[project]
name = "my-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikita Ostrovsky", email = "nik.ostro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pyright>=1.1.394",
]

[tool.ruff]
line-length = 120

[tool.pyright]
reportMissingParameterType = true
reportUnknownParameterType = true
